2010-06-27  Sam Steingold  <sds@gnu.org>

	Support libsvm 2.91
	* modules/libsvm/configure.in: check for svm_set_print_string_function;
	drop pkg-config support
	* modules/libsvm/libsvm.lisp: call svm_set_print_string_function
	when it is available

2010-06-25  Sam Steingold  <sds@gnu.org>

	* spvw.d (quit): FINISH-OUTPUT on standard streams before saying "Bye"

2010-06-24  Sam Steingold  <sds@gnu.org>

	* stream.d (IS_EINVAL_EXTRA): treat all *BSD flavors like DARWIN

2010-06-24  Sam Steingold  <sds@gnu.org>

	* makemake.in (anymodule): use CLISP_LIBDIR instead of HEREP
	because it is decolonized to prevent "multiple target patterns"

2010-06-24  Sam Steingold  <sds@gnu.org>

	fix bug#3020933: (SETF STREAM-EXTERNAL-FORMAT) fails on TWO-WAY-STREAM
	* stream.d (SET-STREAM-EXTERNAL-FORMAT): handle TWO-WAY-STREAM and
	ECHO-STREAM together with TWO-WAY-SOCKET; use stream_reset_eltype
	to reset pseudofunctions in case line terminator changed

2010-06-24  Sam Steingold  <sds@gnu.org>

	* m4/termcap.m4 (CL_TERMCAP): fix a $LIBTERMCAP test
	Reported by Yaroslav Kavenchuk <kavenchuk@jenty.by>

2010-06-24  Yaroslav Kavenchuk  <kavenchuk@jenty.by>

	* m4/clisp.m4 (CL_DECOLONIZE): fix a typo in the mingw regexp

2010-06-18  Barry Fishman  <barry_fishman@acm.org>
	Sam Steingold  <sds@gnu.org>

	* clhs.lisp (*browsers*): remove firefox-window & firefox-tab,
	add chromium, conkeror, opera; use emacsclient for emacs
	* cfgunix.lisp (*browser*): recommend firefox

2010-06-18  Sam Steingold  <sds@gnu.org>

	* modules/i18n/gettext.c (get_locale_info) [WIN32_NATIVE]:
	accept errorp to avoid errors when asked for the full list
	by (I18N:LANGUAGE-INFORMATION)
	(thousands_sep_to_STACK, locale_string_to_STACK)
	(locale_int_to_STACK, locale_bool_to_STACK):
	pass 1 to get_locale_info()
	(get_lang_info, res_to_obj): merge
	(I18N:LANGUAGE-INFORMATION): update

2010-06-18  Sam Steingold  <sds@gnu.org>

	fix the 2010-04-15 patch: rl_deprep_term_function is not always present